fix: reduce page padding-bottom on mobile

--- a/styles/custom-css/adminDashViewEmployers.css
+++ b/styles/custom-css/adminDashViewEmployers.css
@@ -3,7 +3,7 @@ body{
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 6rem;
+  padding-bottom: 2rem;
 }
 
 .main-content{
@@ -99,6 +99,9 @@ table th {
   .talent-card{
     width: calc(33% - 12px);
     max-width: 18.5rem !important;
+  }
+  body{
+    padding-bottom: 4rem;
   }
 }
 
